[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "dataframe_memory"
version = "2023.3.1"
urls = {repository = "https://github.com/eurobios-mews-labs/dataframe-memory.git"}
description = "Reduce pandas' dataframe memory usage"
authors = [{ name = "Eurobios", email = "contact_ost@eurobios.com" }]
license = { file = "LICENSE" }
classifiers = [
              "Programming Language :: Python",
              "Programming Language :: Python :: 3",
]
keywords = ["data", "dataframe"]
requires-python = ">=3.6"

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
            "test/",

]